chore: MV3 stabilization + diagnostics; archive legacy MV2 under archive/extension-mv2; docs and release notes for v1.0.2

--- a/extension-chrome/options.html
+++ b/extension-chrome/options.html
@@ -248,13 +248,12 @@
         </div>
         
         <div class="version-info">
-            Recipe Transformer Extension v1.0.0<br>
-            <a href="https://github.com/your-username/recipe-transformer" target="_blank">GitHub</a> • 
-            <a href="mailto:your-email@example.com">Support</a>
+            Recipe Transformer Extension v1.0.2<br>
+            <a href="https://github.com/nbhansen/RecipeFriend" target="_blank">GitHub</a>
         </div>
     </div>
     
-    <script src="browser-shim.js"></script>
+    <script src="lib/browser-polyfill.min.js"></script>
     <script src="options.js"></script>
 </body>
 </html>
